# anythingllm-stablediffusion-agent

./: Cargo.toml  README.md  handler.js  package-lock.json  package.json  plugin.json
src/: javascript.rs  lib.rs  stable_diffusion.rs
